--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WETULI - E-Commerce Website Template</title>
-    <meta name="description" content="E-Commerce Website Template Coded by Tamale Julius">
-</head>
-<body>
-    
-</body>
+    <meta
+      name="description"
+      content="E-Commerce Website Template Coded by Tamale Julius"
+    />
+
+    <!-- CSS Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <!-- Header Start -->
+    <header class="header">
+      <div class="top-row">
+        <div class="container">
+          <div class="contact-info">
+            <p>
+              <ion-icon name="call-outline"></ion-icon>
+              <a href="tel:+256771234567">+256 77 123 4567</a>
+            </p>
+
+            <p>
+              <ion-icon name="mail-outline"></ion-icon>
+              <a href="mailto:info@wetuli.com">info@wetuli.com</a>
+            </p>
+          </div>
+
+          <div class="social-icons">
+            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-pinterest"></ion-icon></a>
+          </div>
+
+          <div class="location">
+            <p>
+              <ion-icon name="location-outline"></ion-icon>
+              Market Square, Kampala, Uganda
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Header End -->
+
+    <!-- JS Scripts -->
+    <script src="index.js"></script>
+
+    <!-- ION-ICONS -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
