--- a/index.html
+++ b/index.html
@@ -54,6 +54,65 @@
           </div>
         </div>
       </div>
+
+      <div class="middle-row">
+        <div class="container">
+          <a href="index.html" class="logo"> WETULI </a>
+
+          <div class="desktop-btns">
+            <div class="search-box">
+              <input type="text" placeholder="I am looking for..." />
+              <button class="search-btn">
+                <ion-icon name="search-outline"></ion-icon>
+              </button>
+            </div>
+
+            <div class="desktop-cta-btns">
+              <div class="login">
+                <a href="login.html">
+                  <ion-icon name="person-outline"></ion-icon>
+                </a>
+              </div>
+
+              <div class="wishlist">
+                <a href="wishlist.html">
+                  <ion-icon name="heart-outline"></ion-icon>
+                  <span class="wishlist-count shop-count">0</span>
+                </a>
+              </div>
+
+              <div class="cart">
+                <a href="cart.html">
+                  <ion-icon name="cart-outline"></ion-icon>
+                  <span class="cart-count shop-count">0</span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="mobile-btns">
+            <a href="login.html">
+              <ion-icon name="person-outline"></ion-icon>
+            </a>
+
+            <a href="wishlist.html" class="cta-btn">
+              <ion-icon name="heart-outline"></ion-icon>
+              <span class="wishlist-count count">0</span>
+            </a>
+
+            <a href="cart.html" class="cta-btn">
+              <ion-icon name="cart-outline"></ion-icon>
+              <span class="cart-count count">0</span>
+            </a>
+
+            <input type="checkbox" class="checkbox" id="checkbox">
+            <label for="checkbox" class="toggle">
+                <div class="bars" id="bar1"></div>
+                <div class="bars" id="bar2"></div>
+                <div class="bars" id="bar3"></div>
+            </label>
+        </div>
+      </div>
     </header>
     <!-- Header End -->
 
